# EV_test02_-_2024011216

./: README.md
src/hello_ros2/: package.xml  setup.py
src/hello_ros2/hello_ros2/: ev_test_2_sender.py  ev_test_2_subscriber.py
