<package format="3">
  <name>hello_ros2</name>
  <version>0.0.0</version>
  <description>包含发送者和订阅者节点的 ROS2 包</description>

  <maintainer email="laurie@todo.todo">laurie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

